--- a/tasks/08_update_le_config.yml
+++ b/tasks/08_update_le_config.yml
@@ -7,49 +7,48 @@
 
 # This is NOT used for certificate renewal. Cert-manager will process the certificate renewals.
 
-###[ Update Let's Encrypt Provider ]###############################################################
+# [ Update Let's Encrypt Provider ]################################################################
 - name: Update Lets Encrypt Provider Block
-  block:
-  - name: Clone Remote ArgoCD Repository
-    ansible.builtin.git:
-      repo: "{{install.argocd.repository.url|urlsplit('scheme')}}://{{install.argocd.repository.username}}:{{install.argocd.repository.password}}@{{install.argocd.repository.url|urlsplit('hostname')}}{{install.argocd.repository.url|urlsplit('path')}}"
-      dest: "/home/{{install.os.non_root_user.name}}/argocd/init_git_repo/"
-      force: yes
-
-  # Applications templates to render and then check into Git repository are defined below
-  # Only process templates if application is enabled.
-  - name: Process Deployable Enabled Applications
-    include_tasks: "process_app_to_deploy.yml"
-    loop:
-      - { enabled: true,  name: "lets-encrypt", overwrite_files: "yes" }
-    when:
-      - deploy_app.enabled == true
-    loop_control:
-      loop_var: deploy_app
-      label: "{{deploy_app}}"
-
-  # Update Traefik Certificate (domain names, or ClusterIssuer)
-  - name: Process Traefik Certificate
-    ansible.builtin.template:
-      src: "traefik/workloads/traefik-config/traefik_wildcard_cert.yaml.j2"
-      dest: "/home/{{install.os.non_root_user.name}}/argocd/init_git_repo/workloads/traefik-config/traefik_wildcard_cert.yaml"
-      mode: 0660
-      owner: "{{install.os.non_root_user.name}}"
-      group: "{{install.os.non_root_user.name}}"
-      force: yes
-      
-  - name: Check-in Any New or Modified Files
-    include_tasks: "checkin_argocd_repo_files.yml"
-    vars:
-      commit_message: "- Lets Encrypt Certificates"  # Keep under 30 chars
-
-  - name: Delete Local ArgoCD Secrets and Git Repo
-    ansible.builtin.file:
-      path: "/home/{{install.os.non_root_user.name}}/argocd"
-      state: absent
-
-  when: 
+  when:
     - inventory_hostname == groups['k3s_control'][0]
-    - install.argocd.enabled|default(false)|bool == true
+    - install.argocd.enabled | default(false) | bool
   tags:
     - config_le_certificates
+  block:
+    - name: Clone Remote ArgoCD Repository
+      ansible.builtin.git: # noqa yaml[line-length] latest[git]
+        repo: "{{ install.argocd.repository.url | urlsplit('scheme') }}://{{ install.argocd.repository.username }}:{{ install.argocd.repository.password }}@{{ install.argocd.repository.url | urlsplit('hostname') }}{{ install.argocd.repository.url | urlsplit('path') }}"
+        dest: "/home/{{ install.os.non_root_user.name }}/argocd/init_git_repo/"
+        force: true
+
+    # Applications templates to render and then check into Git repository are defined below
+    # Only process templates if application is enabled.
+    - name: Process Deployable Enabled Applications
+      ansible.builtin.include_tasks: "process_app_to_deploy.yml"
+      loop:
+        - { enabled: true, name: "lets-encrypt", overwrite_files: "yes" }
+      when:
+        - deploy_app.enabled
+      loop_control:
+        loop_var: deploy_app
+        label: "{{ deploy_app }}"
+
+    # Update Traefik Certificate (domain names, or ClusterIssuer)
+    - name: Process Traefik Certificate
+      ansible.builtin.template:
+        src: "traefik/workloads/traefik-config/traefik_wildcard_cert.yaml.j2"
+        dest: "/home/{{ install.os.non_root_user.name }}/argocd/init_git_repo/workloads/traefik-config/traefik_wildcard_cert.yaml"
+        mode: "0660"
+        owner: "{{ install.os.non_root_user.name }}"
+        group: "{{ install.os.non_root_user.name }}"
+        force: true
+
+    - name: Check-in Any New or Modified Files
+      ansible.builtin.include_tasks: "checkin_argocd_repo_files.yml"
+      vars:
+        commit_message: "- Lets Encrypt Certificates"  # Keep under 30 chars
+
+    - name: Delete Local ArgoCD Secrets and Git Repo
+      ansible.builtin.file:
+        path: "/home/{{ install.os.non_root_user.name }}/argocd"
+        state: absent
